# embed-fusion

./: .gitignore  README.md  model_card.md  pyproject.toml
MoEmbeddings/: README.md  eval.py  single.py
auto-encoder/: .gitignore  README.md  concat_auto_enc.py  concat_autoencode.py  concat_autoencode_eval.py  concat_autoencode_generate_embeddings.py  concat_map_eval.py  config.py  data_loader.py  embed_auto_enc.py  embed_autoencode.py  embed_autoencode_eval.py  extract_ndcg.sh  generate_data_single_model.py  latest.sh  mapper.py  model.py  model_card.md  train.py
auto-encoder/generate_data/: README.md  generate_embeddings.py  generate_split.py
auto-encoder/results2/e5_auto_enc_256/no_model_name_available/no_revision_available/: NFCorpus.json
auto-encoder/results2/e5_auto_enc_500/no_model_name_available/no_revision_available/: NFCorpus.json
auto-encoder/results2/e5_auto_enc_600/no_model_name_available/no_revision_available/: NFCorpus.json
generate_data/: generate_data_mixed.py  generate_embeddings.py
results/: results_concat.csv
src/ef/: README.md  config.py  ef.py  globals.py  utils.py
src/ef/cli/: embed.py  embed_bucc.py  evaluate.py  lda copy.py  lda.py  lda_bucc.py  pca.py  plausibility.py  run_mteb.py  sae copy.py  sae.py  svd.py  svd_bucc.py  translate.py  visualize.py
